--- a/.github/workflows/build-app-windows.yml
+++ b/.github/workflows/build-app-windows.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Construir los binarios para todos los sistemas operativos
         run: |
-          pipenv run pyinstaller --windowed --name="App" --onefile app.py
+          pipenv run pyinstaller --windowed --name="App" --onefile main.py
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
